Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111436

wasm: Dialog title does not cause popups to be dismissed

    XMLWordPrintable

Details

    • WebAssembly
    • cb8f62660 (dev)

    Description

      Clicking on title bar of a dialog seems to only raise the dialog to top, but does not cause popups to be dismissed. To reproduce:

      • run attached example
      • click save icon
      • open "Look in" combobox
      • click title bar of the save dialog
      • move save dialog away to reveal the open popup behind it

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikolaj.boc MikoĊ‚aj Boc (Inactive)
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes